AuthServiceImplTest.java updated